major upgrade to for design, embed code, confluence 7, and many more...